# XCStringsTranslator

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Localizable.xcstrings  Makefile  README.md  SECURITY.md  example.xcstrings  kodus-config.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pr-title.yml  publish.yml  release-please.yml  scorecard.yml
.kody/rules/: cli.md  models.md  openrouter-pricing.md  tests.md  translator.md
src/xcstrings_translator/: __init__.py  cli.py  models.py  openrouter_pricing.py  translator.py
src/xcstrings_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: Localizable.xcstrings  conftest.py  test_cli.py  test_fd_integration.py  test_models.py  test_openrouter_pricing.py  test_translator.py
xcstrings_translator/: models.py
