[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xcstrings-translator"
version = "1.0.0"
description = "Translate Apple Localizable.xcstrings files using Claude AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.14",
    "pydantic-ai-slim[anthropic,openai,google]>=0.0.14",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
xcstrings = "src.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
