[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xcstrings-translator"
version = "1.1.3"
description = "Translate Apple Localizable.xcstrings files using Claude AI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Justin Lanfermann", email = "Justin@Lanfermann.dev" }
]
keywords = ["xcstrings", "localization", "translation", "apple", "ios", "macos", "i18n", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Localization",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.10",
    "pydantic-ai>=1.0",
    "pydantic-ai-slim[anthropic,openai,google]>=1.0",
    "typer>=0.15",
    "rich>=14.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/jaylann/XCStringsTranslator"
Repository = "https://github.com/jaylann/XCStringsTranslator"
Issues = "https://github.com/jaylann/XCStringsTranslator/issues"

[project.scripts]
xcstrings = "xcstrings_translator.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xcstrings_translator = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end test exercising the real pydantic-ai/httpx stack against a local stub server",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
# the formatter owns line wrapping; the leftovers are long strings it won't split.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are expected in tests
